chat 80% done. Security(xss) left to go

--- a/src/main/resources/templates/chatting/chatroom.mustache
+++ b/src/main/resources/templates/chatting/chatroom.mustache
@@ -40,8 +40,10 @@
       </div>
    </div>
    <div class="MessageInputWrapper">
+   	<form onsubmit="return send()">
       <input class="MessageInput" type="text" id="message" placeholder="Message" autocomplete="off"/>
-      <button class="MessageButton" type="button" onClick="send()">보내기</button>
+      <button class="MessageButton" type="button">보내기</button>
+    </form>
       <a href="/rooms">뒤로</a>
    </div>
 </body>
